# kiss-rpc

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile.build  LICENSE  README.md  TODO  main.cpp  md5.cpp  md5.h  misc.h  msbuild.bat  rpc  rpc.l  rpc.sln  rpc.vcproj  rpc.vcxproj  rpc.vcxproj.filters  rpc.y  shuai.txt  zhang.txt
.devcontainer/: Dockerfile  devcontainer.json
docs/: IDL.md
example/: gen_all.sh  gen_mac_all.sh  rpc  rpc_mac  shuai.cpp  shuai.h  shuai.rpc  shuaiIF.h  zhang.rpc
example/gen_cpp/: shuai.cpp  shuai.h  zhang.cpp  zhang.h
example/gen_go/: SexType.go  ZhangProxy.go  ZhangStub.go
generator/: As3Generator.cpp  As3Generator.h  CSharpGenerator.cpp  CSharpGenerator.h  CppGenerator.cpp  CppGenerator.h  Generator.cpp  Generator.h  GoGenerator.cpp  GoGenerator.h  TSGenerator.cpp  TSGenerator.h
lib/: gen_all.sh  rpc
lib/as3/: BigInt.as  IProtoclo.as  IProtocol.as  Protocol.as
lib/cpp/: Common.h  EnumMap.h  IBinProtocol.cpp  IBinProtocol.h  IProtoclo.h  IProtocol.h  RpcTypeDef.h
lib/cpp/Rpc/: ClientStub.h  RpcChannle.cpp  ServiceProxy.h
lib/cpp/example/: HelloClient.cpp  HelloMsg.cpp  HelloMsg.h  HelloMsg.rpc  HelloServer.cpp
lib/cpp/rpc/: ClientStub.h  Common.h  Connection.cpp  Connection.h  EndPoint.cpp  EndPoint.h  EnumMap.h  EventHandler.cpp  EventHandler.h  NetEvent.cpp  NetEvent.h  Packet.cpp  Packet.h  Packet.rpc  (+10 more)
lib/csharp/: IProtocol.cs  Protocol.cs
lib/gateway/: go.mod  go.sum  main.go
lib/go/: HelloMsg.rpc  IProtocol.go  Protocol.go  RpcClient.go  RpcServer.go  Session.go  go.mod  go.sum
lib/schema/: Packet.rpc
lib/ts/: package.json  tsconfig.json  webpack.config.js
misc/: misc.h
parser/: DefType.cpp  DefType.h  Global.cpp  Global.h  Program.cpp  Program.h
(+73 files in other folders)
